--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="password">PASSWORD</string>
     <string name="confirm_password">CONFIRM PASSWORD</string>
     <string name="register">REGISTER</string>
+    <string name="google">Login with google button</string>
+    <string name="newUser">If you are new user click</string>
+    />
+    <string name="registration"> Registration</string>
+    <string name="login">login</string>
+    />
 </resources>
